result/HTML/reg4.html.err
./test/HTML/reg4.html:10: error: Unexpected end tag : p
</p>
   ^
